--- a/internal/completions/client/azureopenai/BUILD.bazel
+++ b/internal/completions/client/azureopenai/BUILD.bazel
@@ -15,6 +15,8 @@ go_library(
         "@com_github_azure_azure_sdk_for_go_sdk_ai_azopenai//:azopenai",
         "@com_github_azure_azure_sdk_for_go_sdk_azcore//:azcore",
         "@com_github_azure_azure_sdk_for_go_sdk_azidentity//:azidentity",
+        "@com_github_pkoukk_tiktoken_go//:tiktoken-go",
+        "@com_github_pkoukk_tiktoken_go_loader//:tiktoken-go-loader",
         "@com_github_sourcegraph_log//:log",
         "@org_golang_x_net//http2",
     ],
@@ -33,6 +35,8 @@ go_test(
         "@com_github_azure_azure_sdk_for_go_sdk_ai_azopenai//:azopenai",
         "@com_github_azure_azure_sdk_for_go_sdk_azcore//:azcore",
         "@com_github_hexops_autogold_v2//:autogold",
+        "@com_github_pkoukk_tiktoken_go//:tiktoken-go",
+        "@com_github_pkoukk_tiktoken_go_loader//:tiktoken-go-loader",
         "@com_github_sourcegraph_log//:log",
         "@com_github_stretchr_testify//assert",
         "@com_github_stretchr_testify//require",
